# visionresearch

./: .gitignore  Dockerfile  GEMINI.md  docker-compose.yml  implementationplan.md  neuro_symbolic_pipeline_logic.md  pipeline.md  start.sh
backend/: __init__.py  config.py  fix_imports.py  main.py  pyproject.toml  test_api.py  test_florence_vqa.py  test_inference.py  test_phase3.py  test_phase4.py  visionresearch.db
backend/api/: __init__.py  routes.py
backend/core/: __init__.py  base.py  database.py  events.py  model_manager.py  models.py  pipeline.py  schemas.py
backend/modules/: __init__.py  caption.py  colors.py  depth.py  faces.py  metadata.py  nsfw.py  objects.py  ocr.py  pose.py  segmentation.py  siglip.py
backend/plugins/: __init__.py  sample_plugin.py
backend/tests/: test_pipeline.py
backend/utils/: __init__.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/components/: ChatPanel.module.css  ChatPanel.tsx  HistoryPanel.module.css  HistoryPanel.tsx  ImageCanvas.module.css  ImageCanvas.tsx  ImageUpload.module.css  ImageUpload.tsx  ModuleCard.module.css  ModuleCard.tsx  OverlayControls.module.css  OverlayControls.tsx  ProgressBar.module.css  ProgressBar.tsx  ResultsPanel.module.css  ResultsPanel.tsx  TaskRunner.tsx
frontend/src/hooks/: useAnalysis.ts  useSSE.ts
frontend/src/types/: analysis.ts
frontend/tests/: ProgressBar.test.tsx
omni_percept_universal/: app.py  pipeline_runner.py  requirements.txt
omni_percept_universal/data/db/: chroma.sqlite3
omni_percept_universal/src/: memory_utils.py  question_parser.py  stage1_grounding.py  stage2_geometry.py  stage3_z3.py  stage4_rag.py  stage5_vlm.py
